+ Added support for 'glass' outline type in Zoomedia. It's also enabled by default, at least for now. (Aeva-Gallery.php, Aeva-Gallery2.php, Aeva-Subs-Vital.php, Media.language.php, zoom.css) ! Zoomedia didn't comply with the expand duration variable. Also made sure to change its default from 250 to 800ms. Let's enjoy these animations, shan't we? (Aeva-Gallery2.php, Aeva-Subs-Vital.php, zoomedia.js) ! Found the reason for the IE7 bug... 'overflow: hidden' triggers hasLayout and messes up with its width. Setting it to hidden after calculating the width does the trick. (zoomedia.js, zoom.css) ! Zoom out animation wasn't correctly resetting the overflow value either. (zoomedia.js) - Removed a debug line. (zoomedia.js) - Removed closeOnClick option (will never be used, seriously.) (zoomedia.js)

--- a/Themes/default/styles/zoom.css
+++ b/Themes/default/styles/zoom.css
@@ -34,13 +34,12 @@
 
 .zoom-desc-contain
 	box-sizing: border-box
-	overflow: hidden
 	margin: 0 10px 10px
 	text-align: left
 	cursor: default
 	color: #000
 	.mg_desc
-		color: #999
+		color: #888
 
 .lonely
 	float: none
@@ -94,6 +93,9 @@
 			color: #ccc
 
 .zoom-white extends .zoom-base
+.zoom-glass extends .zoom-base
+	background: linear-gradient(bottom, #fff, rgba(255,255,255, .9) 100px, rgba(0,0,0, .2) 100%, rgba(0,0,0, .2))
+
 .zoom-black extends .zoom-base
 	background: #000
 	border: 1px solid #333
